Only allow scrollbars in one direction. This prevents weirdness where a horizontal scrollbar appearing forces a vertical scrollbar to pop up.

--- a/webroot/SillyGame.css
+++ b/webroot/SillyGame.css
@@ -7,6 +7,5 @@ body {
 	border-bottom: 1px solid black;
 }
 
-.gameArea {
-	overflow-y: auto;
+.gamesDiv {
 }
